prototype/parser/PythonParser.py
# Generated from /workspaces/prototype/antlr4/Python.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PythonParser ( Parser ):

    grammarFileName = "Python.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'.'", "<INVALID>", "'def'", "'return'", 
                     "'from'", "'import'", "'as'", "'del'", "'pass'", "'break'", 
                     "'continue'", "'if'", "'elif'", "'else'", "'while'", 
                     "'for'", "'in'", "'or'", "'and'", "'not'", "'is'", 
                     "'None'", "'True'", "'False'", "<INVALID>", "','", 
                     "':'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'<<'", 
                     "'>>'", "'*'", "'**'", "'='", "'+'", "'-'", "'/'", 
                     "'%'", "'|'", "'^'", "'&'", "'<'", "'>'", "'=='", "'>='", 
                     "'<='", "'<>'", "'!='", "'+='", "'-='", "'*='", "'@='", 
                     "'/='", "'%='", "'&='", "'|='", "'^='", "'<<='", "'>>='", 
                     "'**='", "'//='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "FLOAT_NUMBER", 
                      "DEF", "RETURN", "FROM", "IMPORT", "AS", "DEL", "PASS", 
                      "BREAK", "CONTINUE", "IF", "ELIF", "ELSE", "WHILE", 
                      "FOR", "IN", "OR", "AND", "NOT", "IS", "NONE", "TRUE", 
                      "FALSE", "NEWLINE", "COMMA", "COLON", "OPEN_PAREN", 
                      "CLOSE_PAREN", "OPEN_BRACK", "CLOSE_BRACK", "OPEN_BRACE", 
                      "CLOSE_BRACE", "LEFT_SHIFT", "RIGHT_SHIFT", "STAR", 
                      "POWER", "ASSIGN", "ADD", "MINUS", "DIV", "MOD", "OR_OP", 
                      "XOR", "AND_OP", "LESS_THAN", "GREATER_THAN", "EQUALS", 
                      "GT_EQ", "LT_EQ", "NOT_EQ_1", "NOT_EQ_2", "ADD_ASSIGN", 
                      "SUB_ASSIGN", "MULT_ASSIGN", "AT_ASSIGN", "DIV_ASSIGN", 
                      "MOD_ASSIGN", "AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN", 
                      "LEFT_SHIFT_ASSIGN", "RIGHT_SHIFT_ASSIGN", "POWER_ASSIGN", 
                      "IDIV_ASSIGN", "NAME", "STRING_LITERAL", "DECIMAL_INTEGER", 
                      "HEX_INTEGER", "OCT_INTEGER", "BIN_INTEGER", "IGNORE", 
                      "UNKNOWN_CHAR", "CYRILLIC_RANGE", "INDENT", "DEDENT" ]

    RULE_file_input = 0
    RULE_single_input = 1
    RULE_eval_input = 2
    RULE_stmt = 3
    RULE_simple_stmt = 4
    RULE_small_stmt = 5
    RULE_compound_stmt = 6
    RULE_if_stmt = 7
    RULE_if_elif = 8
    RULE_if_else = 9
    RULE_while_stmt = 10
    RULE_for_stmt = 11
    RULE_funcdef = 12
    RULE_parameters = 13
    RULE_param_argslist = 14
    RULE_suite = 15
    RULE_expr_stmt = 16
    RULE_augassign = 17
    RULE_flow_stmt = 18
    RULE_return_stmt = 19
    RULE_pass_stmt = 20
    RULE_break_stmt = 21
    RULE_continue_stmt = 22
    RULE_test = 23
    RULE_comp_op = 24
    RULE_expr = 25
    RULE_factor = 26
    RULE_atom = 27
    RULE_nameaccess = 28
    RULE_collectiondefs = 29
    RULE_testlist_comp = 30
    RULE_funcinvoke = 31
    RULE_arglist = 32
    RULE_subscript = 33
    RULE_dictorsetmaker = 34
    RULE_dictormaker = 35
    RULE_setmaker = 36
    RULE_number = 37
    RULE_integer = 38
    RULE_string = 39

    ruleNames =  [ "file_input", "single_input", "eval_input", "stmt", "simple_stmt", 
                   "small_stmt", "compound_stmt", "if_stmt", "if_elif", 
                   "if_else", "while_stmt", "for_stmt", "funcdef", "parameters", 
                   "param_argslist", "suite", "expr_stmt", "augassign", 
                   "flow_stmt", "return_stmt", "pass_stmt", "break_stmt", 
                   "continue_stmt", "test", "comp_op", "expr", "factor", 
                   "atom", "nameaccess", "collectiondefs", "testlist_comp", 
                   "funcinvoke", "arglist", "subscript", "dictorsetmaker", 
                   "dictormaker", "setmaker", "number", "integer", "string" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    FLOAT_NUMBER=3
    DEF=4
    RETURN=5
    FROM=6
    IMPORT=7
    AS=8
    DEL=9
    PASS=10
    BREAK=11
    CONTINUE=12
    IF=13
    ELIF=14
    ELSE=15
    WHILE=16
    FOR=17
    IN=18
    OR=19
    AND=20
    NOT=21
    IS=22
    NONE=23
    TRUE=24
    FALSE=25
    NEWLINE=26
    COMMA=27
    COLON=28
    OPEN_PAREN=29
    CLOSE_PAREN=30
    OPEN_BRACK=31
    CLOSE_BRACK=32
    OPEN_BRACE=33
    CLOSE_BRACE=34
    LEFT_SHIFT=35
    RIGHT_SHIFT=36
    STAR=37
    POWER=38
    ASSIGN=39
    ADD=40
    MINUS=41
    DIV=42
    MOD=43
    OR_OP=44
    XOR=45
    AND_OP=46
    LESS_THAN=47
    GREATER_THAN=48
    EQUALS=49
    GT_EQ=50
    LT_EQ=51
    NOT_EQ_1=52
    NOT_EQ_2=53
    ADD_ASSIGN=54
    SUB_ASSIGN=55
    MULT_ASSIGN=56
    AT_ASSIGN=57
    DIV_ASSIGN=58
    MOD_ASSIGN=59
    AND_ASSIGN=60
    OR_ASSIGN=61
    XOR_ASSIGN=62
    LEFT_SHIFT_ASSIGN=63
    RIGHT_SHIFT_ASSIGN=64
    POWER_ASSIGN=65
    IDIV_ASSIGN=66
    NAME=67
    STRING_LITERAL=68
    DECIMAL_INTEGER=69
    HEX_INTEGER=70
    OCT_INTEGER=71
    BIN_INTEGER=72
    IGNORE=73
    UNKNOWN_CHAR=74
    CYRILLIC_RANGE=75
    INDENT=76
    DEDENT=77

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class File_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PythonParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.NEWLINE)
            else:
                return self.getToken(PythonParser.NEWLINE, i)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StmtContext)
            else:
                return self.getTypedRuleContext(PythonParser.StmtContext,i)


        def getRuleIndex(self):
            return PythonParser.RULE_file_input




    def file_input(self):

        localctx = PythonParser.File_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file_input)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3309937310776) != 0) or ((((_la - 67)) & ~0x3f) == 0 and ((1 << (_la - 67)) & 63) != 0):
                self.state = 82
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [26]:
                    self.state = 80
                    self.match(PythonParser.NEWLINE)
                    pass
                elif token in [3, 4, 5, 10, 11, 12, 13, 16, 17, 21, 23, 24, 25, 29, 31, 33, 40, 41, 67, 68, 69, 70, 71, 72]:
                    self.state = 81
                    self.stmt()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 87
            self.match(PythonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Single_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(PythonParser.NEWLINE, 0)

        def simple_stmt(self):
            return self.getTypedRuleContext(PythonParser.Simple_stmtContext,0)


        def compound_stmt(self):
            return self.getTypedRuleContext(PythonParser.Compound_stmtContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_single_input




    def single_input(self):

        localctx = PythonParser.Single_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_single_input)
        try:
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.match(PythonParser.NEWLINE)
                pass
            elif token in [3, 5, 10, 11, 12, 21, 23, 24, 25, 29, 31, 33, 40, 41, 67, 68, 69, 70, 71, 72]:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.simple_stmt()
                pass
            elif token in [4, 13, 16, 17]:
                self.enterOuterAlt(localctx, 3)
                self.state = 91
                self.compound_stmt()
                self.state = 92
                self.match(PythonParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Eval_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def test(self):
            return self.getTypedRuleContext(PythonParser.TestContext,0)


        def EOF(self):
            return self.getToken(PythonParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.NEWLINE)
            else:
                return self.getToken(PythonParser.NEWLINE, i)

        def getRuleIndex(self):
            return PythonParser.RULE_eval_input




    def eval_input(self):

        localctx = PythonParser.Eval_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_eval_input)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.test(0)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==26:
                self.state = 97
                self.match(PythonParser.NEWLINE)
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 103
            self.match(PythonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_stmt(self):
            return self.getTypedRuleContext(PythonParser.Simple_stmtContext,0)


        def compound_stmt(self):
            return self.getTypedRuleContext(PythonParser.Compound_stmtContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_stmt




    def stmt(self):

        localctx = PythonParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stmt)
        try:
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 5, 10, 11, 12, 21, 23, 24, 25, 29, 31, 33, 40, 41, 67, 68, 69, 70, 71, 72]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.simple_stmt()
                pass
            elif token in [4, 13, 16, 17]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.compound_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def small_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.Small_stmtContext)
            else:
                return self.getTypedRuleContext(PythonParser.Small_stmtContext,i)


        def NEWLINE(self):
            return self.getToken(PythonParser.NEWLINE, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_simple_stmt




    def simple_stmt(self):

        localctx = PythonParser.Simple_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_simple_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.small_stmt()
            self.state = 114
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 110
                    self.match(PythonParser.T__0)
                    self.state = 111
                    self.small_stmt() 
                self.state = 116
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 117
                self.match(PythonParser.T__0)


            self.state = 120
            self.match(PythonParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Small_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr_stmt(self):
            return self.getTypedRuleContext(PythonParser.Expr_stmtContext,0)


        def flow_stmt(self):
            return self.getTypedRuleContext(PythonParser.Flow_stmtContext,0)


        def pass_stmt(self):
            return self.getTypedRuleContext(PythonParser.Pass_stmtContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_small_stmt




    def small_stmt(self):

        localctx = PythonParser.Small_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_small_stmt)
        try:
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 21, 23, 24, 25, 29, 31, 33, 40, 41, 67, 68, 69, 70, 71, 72]:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.expr_stmt()
                pass
            elif token in [5, 11, 12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.flow_stmt()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 124
                self.pass_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_stmt(self):
            return self.getTypedRuleContext(PythonParser.If_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(PythonParser.While_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(PythonParser.For_stmtContext,0)


        def funcdef(self):
            return self.getTypedRuleContext(PythonParser.FuncdefContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_compound_stmt




    def compound_stmt(self):

        localctx = PythonParser.Compound_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_compound_stmt)
        try:
            self.state = 131
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.if_stmt()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.while_stmt()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 3)
                self.state = 129
                self.for_stmt()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 130
                self.funcdef()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(PythonParser.IF, 0)

        def test(self):
            return self.getTypedRuleContext(PythonParser.TestContext,0)


        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)

        def suite(self):
            return self.getTypedRuleContext(PythonParser.SuiteContext,0)


        def if_elif(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.If_elifContext)
            else:
                return self.getTypedRuleContext(PythonParser.If_elifContext,i)


        def if_else(self):
            return self.getTypedRuleContext(PythonParser.If_elseContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_if_stmt




    def if_stmt(self):

        localctx = PythonParser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_if_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(PythonParser.IF)
            self.state = 134
            self.test(0)
            self.state = 135
            self.match(PythonParser.COLON)
            self.state = 136
            self.suite()
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 137
                self.if_elif()
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 143
                self.if_else()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_elifContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELIF(self):
            return self.getToken(PythonParser.ELIF, 0)

        def test(self):
            return self.getTypedRuleContext(PythonParser.TestContext,0)


        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)

        def suite(self):
            return self.getTypedRuleContext(PythonParser.SuiteContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_if_elif




    def if_elif(self):

        localctx = PythonParser.If_elifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_if_elif)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(PythonParser.ELIF)
            self.state = 147
            self.test(0)
            self.state = 148
            self.match(PythonParser.COLON)
            self.state = 149
            self.suite()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_elseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(PythonParser.ELSE, 0)

        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)

        def suite(self):
            return self.getTypedRuleContext(PythonParser.SuiteContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_if_else




    def if_else(self):

        localctx = PythonParser.If_elseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_if_else)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(PythonParser.ELSE)
            self.state = 152
            self.match(PythonParser.COLON)
            self.state = 153
            self.suite()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(PythonParser.WHILE, 0)

        def test(self):
            return self.getTypedRuleContext(PythonParser.TestContext,0)


        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)

        def suite(self):
            return self.getTypedRuleContext(PythonParser.SuiteContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_while_stmt




    def while_stmt(self):

        localctx = PythonParser.While_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_while_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(PythonParser.WHILE)
            self.state = 156
            self.test(0)
            self.state = 157
            self.match(PythonParser.COLON)
            self.state = 158
            self.suite()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(PythonParser.FOR, 0)

        def nameaccess(self):
            return self.getTypedRuleContext(PythonParser.NameaccessContext,0)


        def IN(self):
            return self.getToken(PythonParser.IN, 0)

        def test(self):
            return self.getTypedRuleContext(PythonParser.TestContext,0)


        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)

        def suite(self):
            return self.getTypedRuleContext(PythonParser.SuiteContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_for_stmt




    def for_stmt(self):

        localctx = PythonParser.For_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_for_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(PythonParser.FOR)
            self.state = 161
            self.nameaccess(0)
            self.state = 162
            self.match(PythonParser.IN)
            self.state = 163
            self.test(0)
            self.state = 164
            self.match(PythonParser.COLON)
            self.state = 165
            self.suite()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(PythonParser.DEF, 0)

        def NAME(self):
            return self.getToken(PythonParser.NAME, 0)

        def parameters(self):
            return self.getTypedRuleContext(PythonParser.ParametersContext,0)


        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)

        def suite(self):
            return self.getTypedRuleContext(PythonParser.SuiteContext,0)

